--- a/src/Styles/Main.css
+++ b/src/Styles/Main.css
@@ -6,3 +6,33 @@
     justify-content: center;
     align-items: center;
 }
+
+@media only screen and (max-width: 600px){
+    .main-flexed{
+        display: flex;
+        width: 100%;
+    
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+    
+    .hero-img{
+
+        display: none;
+    }
+    .logo{
+        width: 50px;
+        height: auto;
+
+    }
+    .location{
+        display: none;
+    }
+    .allproduct{
+        display: none;
+    }
+    .guest{
+        display: none;
+    }
+
+}
